# stock-market-prediction-test

./: .gitignore  pyproject.toml  requirements.txt  setup.py
config/: config.yaml
data/processed/: RELIANCE_ml_ready_20250815_114735.parquet
data/raw/yahoo_finance/: HDFCBANK_20250824_113508.parquet  INFY_20250824_113508.parquet  RELIANCE_20250814_213917.parquet  RELIANCE_20250824_113508.parquet  TCS_20250824_113508.parquet
models/: best_model.keras
notebooks/: test_data_pipeline.ipynb  test_data_processing.ipynb  test_model.ipynb  test_tcs.ipynb
src/stock_predictor/: dashboard.py  data_pipeline.py  models.py  preprocessing.py  smoke_test.py
