[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-market-prediction-test"
version = "0.1.0"
description = "AI-powered stock prediction demo "
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Swarnabh Roy", email="workspace.swarnabh@gmail.com"}]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"